# NLP-examples

./: README.md  pyproject.toml
spacy_course/: chapter_1.ipynb  chapter_2.ipynb
